# silo

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  BUILD.md  CROSS-PLATFORM.md  DECISIONS.md  DESIGN.md  MVP.md  README.md  VISION.md
docs/reference/: fs25-modding-notes.md  incumbent-teardown.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: config_test.rs  conflicts_test.rs  detect_game.rs  dl_test.rs  gh_test.rs  icon_test.rs  organize_real.rs  organize_test.rs  scan_real.rs  settings_test.rs
src-tauri/src/: category.rs  conflicts.rs  db.rs  fsgame.rs  gamelaunch.rs  github.rs  icons.rs  lib.rs  main.rs  moddesc.rs  organize.rs  savegame.rs  scan.rs  settings_form.rs  siloapi.rs  store.rs  xmlconfig.rs
src/lib/: api.ts  configSchemas.ts  types.ts
src/lib/components/: CategoryRail.svelte  ConfigEditor.svelte  GitHubAuth.svelte  ModBrowser.svelte  ModDetail.svelte  ModRow.svelte  ModSettings.svelte  VirtualList.svelte
src/lib/styles/: global.css  tokens.css
