[package]
name = "silo"
version = "0.1.0"
description = "Silo — Farming Simulator 25 mod library manager"
authors = ["HLLMR"]
edition = "2021"
rust-version = "1.77"

# The library holds all logic so it's unit-testable without a running app and
# reusable by a future CLI. main.rs is a thin entry point.
[lib]
name = "silo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
rayon = "1"
dirs = "5"
# Icon decoding: FS25 mod icons are usually .dds (BC1/BC3/BC7); some are .png/.jpg.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
image_dds = "0.7"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.dev]
# Faster incremental dev builds; the heavy work is I/O-bound anyway.
incremental = true
